"Configurações do jwt e security foram simplificadas"